SERVER-68887 stringop-overread issue Can not build on the Ubuntu 22.04 LTS